Correction collapse & final commit

--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,7 @@ code {
   font-size: 18px;
   font-weight: 500;
   line-height: 142.6%;
+  list-style: none;
 }
 
 .isClicked {
